@@ -445,6 +445,9 @@ bool do_statusbar_next_word(bool allow_punct);
 bool do_statusbar_prev_word(bool allow_punct);
 #endif
 void do_statusbar_verbatim_input(bool *got_enter);
+#ifndef NANO_TINY
+void do_statusbar_find_bracket(void);
+#endif
 size_t statusbar_xplustabs(void);
 size_t get_statusbar_page_start(size_t start_col, size_t column);
 void update_statusbar_line(const char *curranswer, size_t index);
